# mh370-analysis-tool

./: .gitignore  AGENTS.md  ANOMALY_DRIFT_NOTES.md  CLAUDE.md  README.md  ROADMAP.md  TODO-sharing-and-export.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
config/: analysis.default.toml
docs/: DATA-GUIDE.md  START-HERE.md  bfo-dstg-implementation-notes.md  bfo-reference-data.md  bfo-transparency-report.md  bfo-tuning-findings.md  drift-dataset-gen-report.md  drift-dataset-gen-v2-report.md  dstg-validation.md  end-of-flight-scenarios-plan.md  fuel-model-validation.md  modeling-policy.md  overnight-report.md  research-note-arc7-impact-zone.md  research-note-bfo-model-transparency.md  research-note-bfo-validation-known-positions.md  research-note-era5-drift.md  research-note-oscar-drift.md  research-note-search-effectiveness.md  research-summary.md  roadmap.md
knowledge/: README.md  extract_dstg_18_28.py  fetch-parse-report.md  fetch_era5_wind.py  fetch_sources.py  mh370_model_constants.csv  mh370_reference_data.xlsx  mh370_satcom_data.csv  ml-analysis-report.md  (+4 more)
src-tauri/: Cargo.toml  overnight_stderr.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mh370/: airspaces.rs  anomalies.rs  arcs.rs  bfo.rs  config.rs  data.rs  debris_inversion.rs  drift.rs  drift_beaching.rs  drift_scoring.rs  drift_transport.rs  drift_validation.rs  era5_wind.rs  export.rs  geometry.rs  hycom_currents.rs  mod.rs  oscar.rs  paths.rs  performance.rs  probability.rs  satellite.rs  search_effectiveness.rs  sensitivity.rs
(+133 files in other folders)
