[package]
name = "mh370-tracker"
version = "0.1.0"
description = "MH370 flight path analysis and probability mapping tool"
authors = ["you"]
edition = "2021"
default-run = "mh370-tracker"

[lib]
name = "mh370_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "macros"] }
rand = { version = "0.8", features = ["small_rng"] }
ureq = { version = "2", features = ["tls", "json"] }
